integration-tests/tests/integration/snapshots/integration__record_replay__rerun_error_invalid_run_id.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: "redact_dynamic_fields(&invalid_output.stderr_as_str(), temp_root)"
---
error: invalid value 'not-a-uuid!!!' for '--rerun <RUN_ID_OR_RECORDING>': invalid run ID selector `not-a-uuid!!!`: expected `latest`, hex digits, or a path ending in `.zip`

For more information, try '--help'.
