integration-tests/tests/integration/snapshots/integration__record_replay__store_info_empty.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: "redact_dynamic_fields(&info_empty.stdout_as_str(), temp_root)"
---
Record store location: [TEMP_DIR]
Number of runs: 0
Total size: [SIZE]
