integration-tests/tests/integration/snapshots/integration__record_replay__store_info_missing_store_zip.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: "redact_dynamic_fields(&info_str, temp_root)"
---
Run 80000001-0000-0000-0000-000000000001

  nextest version:  <version>
  command:          '[EXE]' nextest --no-pager --manifest-path '[PATH]' --user-config-file '[PATH]' run -E 'test(=test_success)'
  env:              CARGO_TERM_COLOR=never NEXTEST_SHOW_PROGRESS=counter NEXTEST_STATE_DIR='[PATH]' NEXTEST_USER_CONFIG_FILE=none
  status:           completed (exit code 0)
  started at:       XXXX-XX-XX XX:XX:XX (<ago> ago)
  last written at:  XXXX-XX-XX XX:XX:XX (<ago> ago)
  duration:         <duration>
  replayable:       no: store.zip is missing

  tests:
    passed:         1

  sizes:            compressed  uncompressed  entries
    log                 <size>        <size>       36
    store               <size>        <size>        6
                    ──────────  ────────────  ───────
    total               <size>        <size>       42
