integration-tests/tests/integration/snapshots/integration__record_replay__store_info_multiple_runs.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: "redact_dynamic_fields(&info_output.stdout_as_str(), temp_root)"
---
Record store location: [TEMP_DIR]
Number of runs: 3
Total size: [SIZE]
