integration-tests/tests/integration/snapshots/integration__record_replay__store_info_portable_recording.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: "redact_dynamic_fields(&info_str, temp_root)"
---
Run 79000001-0000-0000-0000-000000000001

  nextest version:  <version>
  command:          '[EXE]' nextest --no-pager --manifest-path '[PATH]' --user-config-file '[PATH]' run -E 'test(=test_success) | test(=test_cwd)'
  env:              CARGO_TERM_COLOR=never NEXTEST_SHOW_PROGRESS=counter NEXTEST_STATE_DIR='[PATH]' NEXTEST_USER_CONFIG_FILE=none
  status:           completed (exit code 0)
  started at:       XXXX-XX-XX XX:XX:XX (<ago> ago)
  last written at:  XXXX-XX-XX XX:XX:XX (<ago> ago)
  duration:         <duration>
  replayable:       yes

  tests:
    passed:         2

  sizes:            compressed  uncompressed  entries
    log                 <size>        <size>       37
    store               <size>        <size>        7
                    ──────────  ────────────  ───────
    total               <size>        <size>       44
