integration-tests/tests/integration/snapshots/integration__record_replay__store_info_single_run.snap
---
source: integration-tests/tests/integration/record_replay.rs
expression: "redact_dynamic_fields(&info_output.stdout_as_str(), temp_root)"
---
Run 10000001-0000-0000-0000-000000000001

  nextest version:  <version>
  command:          '[EXE]' nextest --no-pager --manifest-path '[PATH]' --user-config-file '[PATH]' run --workspace --all-targets
  env:              CARGO_TERM_COLOR=never NEXTEST_SHOW_PROGRESS=counter NEXTEST_STATE_DIR='[PATH]' NEXTEST_USER_CONFIG_FILE=none
  status:           completed (exit code 100)
  started at:       XXXX-XX-XX XX:XX:XX (<ago> ago)
  last written at:  XXXX-XX-XX XX:XX:XX (<ago> ago)
  duration:         <duration>
  replayable:       yes

  tests:
    passed:         23
    failed:         10

  sizes:            compressed  uncompressed  entries
    log                 <size>        <size>       80
    store               <size>        <size>       49
                    ──────────  ────────────  ───────
    total               <size>        <size>      129
